<resources>
    <string name="app_name">LinkUFlightTracker</string>
    <string name="title_activity_maps">LinkUFlightTracker</string>
    <string name="longitude">LONGITUDE</string>
    <string name="latitude">LATITUDE</string>
    <string name="velocity">VELOCITY</string>
    <string name="track">TRACK</string>
    <string name="altitude">ALTITUDE</string>
    <string name="registration">REGISTRATION</string>
    <string name="type">TYPE</string>
    <string name="scheduled">SCHEDULED</string>
    <string name="actual">ACTUAL</string>
    <string name="estimated">ESTIMATED</string>
    <string name="calaltitude">CALIBRATED ALT</string>
    <string name="speed">SPEED</string>
    <string name="departed">DEPARTED</string>
    <string name="arriving">ARRIVING</string>
    <string name="callsign">CALLSIGN</string>
    <string name="route">ROUTE</string>
    <string name="more_info">More Info</string>
    <string name="route_s">Route</string>
    <string name="follow">Follow</string>
    <string name="share">Share</string>
    <string name="country">COUNTRY OF REG.</string>
</resources>