<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.elvinliang.aviation.presentation.ui.DetailTextView
        android:id="@+id/callsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:txtTitle="@string/callsign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.elvinliang.aviation.presentation.ui.DetailTextView
        android:id="@+id/flightmodel_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        app:txtTitle="@string/type"
        app:layout_constraintStart_toEndOf="@+id/callsign"
        app:layout_constraintTop_toTopOf="parent" />

    <com.elvinliang.aviation.presentation.ui.DetailTextView
        android:id="@+id/departed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altitude"
        app:txtTitle="@string/departed" />

    <com.elvinliang.aviation.presentation.ui.DetailTextView
        android:id="@+id/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/departed"
        app:layout_constraintTop_toBottomOf="@+id/altitude"
        app:txtTitle="@string/arriving" />

    <com.elvinliang.aviation.presentation.ui.DetailTextView
        android:id="@+id/altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:txtContent="@string/altitude"
        app:txtTitle="@string/calaltitude" />

    <com.elvinliang.aviation.presentation.ui.DetailTextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altitude"
        app:txtTitle="@string/speed" />


</androidx.constraintlayout.widget.ConstraintLayout>